# ifoxtrot-qt

./: .gitignore  CMakeLists.txt  README.md  commandline.cpp  commandline.h  filetransfer.cpp  filetransfer.h  filetransfer.ui  ifoxtrot-qt.desktop  ifoxtrot-qt.pro  ifoxtrotconn.cpp  ifoxtrotconn.h  ifoxtrotctl.cpp  ifoxtrotctl.h  ifoxtrotmodel.cpp  ifoxtrotmodel.h  ifoxtrotreceiver.cpp  ifoxtrotreceiver.h  ifoxtrotsession.cpp  ifoxtrotsession.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
trans/: ifoxtrot-qt_cs.ts
